<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="all_guests">All Guests</string>
    <string name="present">Present Guests</string>
    <string name="absent">Absent Guests</string>
    <string name="guest_s_name">Guest\'s Name</string>
    <string name="presence">Presence</string>
    <string name="present_radio">Present</string>
    <string name="absent_radio">absent</string>
    <string name="save">Save</string>
    <string name="guest">Convidado</string>
</resources>